--- a/index.html
+++ b/index.html
@@ -1,73 +1,34 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sell Your Car for Cash</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <header>
-        <h1>Sell Your Car for Cash</h1>
-        <p>Fast, easy, and local. Get an offer today!</p>
-    </header>
+<form action="https://formsubmit.co/jmacias101@student.hbuhsd.edu" method="POST">
+    <!-- Anti-spam hidden field -->
+    <input type="text" name="_honey" style="display:none">
+    <input type="hidden" name="_captcha" value="false">
 
-    <main>
-        <section id="form-section">
-            <h2>Get a Free Offer</h2>
-            <form action="mailto:contact@jmpcarsforcash.com" method="post" enctype="text/plain">
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="name" required>
+    <label for="name">Name:</label>
+    <input type="text" id="name" name="name" required>
 
-                <label for="phone">Phone Number:</label>
-                <input type="tel" id="phone" name="phone" required>
+    <label for="phone">Phone Number:</label>
+    <input type="tel" id="phone" name="phone" required>
 
-                <label for="make">Car Make:</label>
-                <input type="text" id="make" name="make" required>
+    <label for="make">Car Make:</label>
+    <input type="text" id="make" name="make" required>
 
-                <label for="model">Car Model:</label>
-                <input type="text" id="model" name="model" required>
+    <label for="model">Car Model:</label>
+    <input type="text" id="model" name="model" required>
 
-                <label for="year">Year:</label>
-                <input type="text" id="year" name="year" required>
+    <label for="year">Year:</label>
+    <input type="text" id="year" name="year" required>
 
-                <label for="mileage">Mileage:</label>
-                <input type="text" id="mileage" name="mileage" required>
+    <label for="mileage">Mileage:</label>
+    <input type="text" id="mileage" name="mileage" required>
 
-                <label for="condition">Condition:</label>
-                <input type="text" id="condition" name="condition" required>
+    <label for="condition">Condition:</label>
+    <input type="text" id="condition" name="condition" required>
 
-                <label for="location">Your Location:</label>
-                <input type="text" id="location" name="location" required>
+    <label for="location">Your Location:</label>
+    <input type="text" id="location" name="location" required>
 
-                <label for="photos">Upload Photos:</label>
-                <input type="file" id="photos" name="photos" accept="image/*" multiple>
+    <label for="photos">Upload Photos:</label>
+    <input type="file" id="photos" name="photos" accept="image/*" multiple>
 
-                <button type="submit">Submit</button>
-            </form>
-        </section>
-
-        <section id="how-it-works">
-            <h2>How It Works</h2>
-            <ol>
-                <li>Fill out the form</li>
-                <li>Get a call/text with a cash offer</li>
-                <li>We pick up and pay you</li>
-            </ol>
-        </section>
-
-        <section id="why-choose-us">
-            <h2>Why Choose JMP?</h2>
-            <ul>
-                <li>Fast and Friendly Service</li>
-                <li>Free Pickup in Southern California</li>
-                <li>We Buy Running and Well-Maintained Cars</li>
-            </ul>
-        </section>
-    </main>
-
-    <footer>
-        <p>Contact: (714) 657-0254 | Email: contact@jmpcarsforcash.com</p>
-    </footer>
-</body>
-</html>
+    <button type="submit">Submit</button>
+</form>
