--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <main>
         
             <!-- Alternate sample form -->
-            <form action="https://formsubmit.co/your@email.com" method="POST" />
-            <form action="https://formsubmit.co/your@email.com" method="POST">
+            <form action="https://formsubmit.co/jmacias101@gmail.com" method="POST" />
+            <form action="https://formsubmit.co/jmacias101@gmail.com" method="POST">
                 <!-- Anti-spam hidden field -->
                 <input type="text" name="_honey" style="display:none">
                 <input type="hidden" name="_captcha" value="false">
