--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
     </header>
 
     <main>
-        
-            <!-- Alternate sample form -->
-            <form action="https://formsubmit.co/jmacias101@gmail.com" method="POST" />
+        <section id="form-section">
+            <h2>Get a Free Offer</h2>
             <form action="https://formsubmit.co/jmacias101@gmail.com" method="POST">
                 <!-- Anti-spam hidden field -->
                 <input type="text" name="_honey" style="display:none">
@@ -70,12 +69,6 @@
             </ul>
         </section>
     </main>
-
-    <footer>
-        <p>Contact: (714) 657-0254 | Email: jmacias101@student.hbuhsd.edu</p>
-    </footer>
-</body>
-</html>
 
     <footer>
         <p>Contact: (714) 657-0254 | Email: jmacias101@student.hbuhsd.edu</p>
