--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
     </header>
 
     <main>
-        <section id="form-section">
-            <h2>Get a Free Offer</h2>
-            <form action="https://formsubmit.co/jmacias101@gmail.com" method="POST">
+        
+            <!-- Alternate sample form -->
+            <form action="https://formsubmit.co/jmpcashforcars@gmail.com" method="POST" />
+            <form action="https://formsubmit.co/your@email.com" method="POST">
                 <!-- Anti-spam hidden field -->
                 <input type="text" name="_honey" style="display:none">
                 <input type="hidden" name="_captcha" value="false">
@@ -71,7 +72,7 @@
     </main>
 
     <footer>
-        <p>Contact: (714) 657-0254 | Email: jmacias101@student.hbuhsd.edu</p>
+        <p>Contact: (714) 631-0322 | Email: jmpcashforcars@gmail.com</p>
     </footer>
 </body>
 </html>
