--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+`<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -16,7 +16,7 @@
         
             <!-- Alternate sample form -->
             <form action="https://formsubmit.co/jmpcashforcars@gmail.com" method="POST" />
-            <form action="https://formsubmit.co/your@email.com" method="POST">
+            <form action="https://formsubmit.co/jmpcashforcars@gmail.com" method="POST">
                 <!-- Anti-spam hidden field -->
                 <input type="text" name="_honey" style="display:none">
                 <input type="hidden" name="_captcha" value="false">
