--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Sell Your Car for Cash</h1>
-        <p>Fast, easy, and local. Get an offer today!</p>
+        <p>Fast and easy, get an offer today!</p>
     </header>
 
     <main>
