--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-`<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -13,11 +13,9 @@
     </header>
 
     <main>
-        
-            <!-- Alternate sample form -->
-            <form action="https://formsubmit.co/jmpcashforcars@gmail.com" method="POST" />
+        <section id="form-section">
+            <h2>Get a Free Offer</h2>
             <form action="https://formsubmit.co/jmpcashforcars@gmail.com" method="POST">
-                <!-- Anti-spam hidden field -->
                 <input type="text" name="_honey" style="display:none">
                 <input type="hidden" name="_captcha" value="false">
 
