--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <section id="form-section">
             <h2>Get a Free Offer</h2>
             <form action="https://formsubmit.co/jmpcashforcars@gmail.com" method="POST">
+                <input type="hidden" name="_next" value="https://jmpcars.github.io/jmpcashforcars/thank-you.html">
                 <input type="text" name="_honey" style="display:none">
                 <input type="hidden" name="_captcha" value="false">
 
@@ -74,3 +75,4 @@
     </footer>
 </body>
 </html>
+
