--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <form action="https://formsubmit.co/jmpcashforcars@gmail.com" method="POST">
                 <input type="text" name="_honey" style="display:none">
                 <input type="hidden" name="_captcha" value="false">
+                <input type="hidden" name="_next" value="https://jmpcars.github.io/jmpcashforcars/thank-you.html">
 
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name" required>
@@ -74,6 +75,3 @@
     </footer>
 </body>
 </html>
-
-
-
