--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <label for="location">Your City:</label>
                 <input type="text" id="location" name="location" required>
 
-                <label for="photos">Upload Photos (One Photo Only):</label>
+                <label for="photos">Upload Photo (One Photo Only):</label>
                 <input type="file" id="photos" name="photos" accept="image/*" multiple>
 
                 <button type="submit">Submit Offer</button>
