--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
+    <!-- Company Name -->
+    <div style="text-align:center; font-size: 3rem; font-weight: bold; margin-top: 20px;">
+        JMP
+    </div>
+
+    <!-- Contact Info -->
+    <div style="text-align:center; margin-bottom: 20px;">
+        <p>Contact: (714) 631-0322 | Email: jmpcashforcars@gmail.com</p>
+    </div>
+
     <header>
         <h1>Sell Your Car for Cash</h1>
         <p>Fast and easy – get a cash offer today!</p>
@@ -14,7 +24,7 @@
 
     <main>
         <section id="form-section">
-            <h2>Get a Free Offer</h2>
+            <h2>Get an Offer</h2>
             <form action="https://formsubmit.co/jmpcashforcars@gmail.com" method="POST" enctype="multipart/form-data">
                 <!-- Hidden setup fields -->
                 <input type="hidden" name="_captcha" value="false">
@@ -72,11 +82,7 @@
         </section>
     </main>
 
-    <footer>
-        <p>Contact: (714) 631-0322 | Email: jmpcashforcars@gmail.com</p>
-    </footer>
-
-    <!-- ✅ Confirmation Popup Script -->
+    <!-- Confirmation Popup Script -->
     <script>
         document.addEventListener("DOMContentLoaded", function () {
             const form = document.querySelector("form");
