--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
-    <!-- Company Name -->
-    <div style="text-align:center; font-size: 3rem; font-weight: bold; margin-top: 20px;">
+    <!-- Company Name Blue Banner -->
+    <div style="background-color:#001f4d; color:white; text-align:center; font-size: 3rem; font-weight: bold; padding: 20px 0; margin: 0;">
         JMP
     </div>
 
     <!-- Contact Info -->
-    <div style="text-align:center; margin-bottom: 20px;">
-        <p>Contact: (714) 631-0322 | Email: jmpcashforcars@gmail.com</p>
+    <div style="text-align:center; margin: 10px 0 30px 0; font-size: 1rem; color: #001f4d; font-weight: 600;">
+        Contact: (714) 631-0322 | Email: jmpcashforcars@gmail.com
     </div>
 
     <header>
