--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <!-- Contact Info -->
     <div style="text-align:center; margin: 10px 0 30px 0; font-size: 1rem; color: #001f4d; font-weight: 600;">
         Contact: (714) 631-0322 | Email: jmpcashforcars@gmail.com
+        Fast and easy – get a cash offer today!
     </div>
 
     <header>
