--- a/index.html
+++ b/index.html
@@ -8,19 +8,10 @@
 </head>
 <body>
     <!-- Company Name Blue Banner -->
-    <div style="background-color:#001f4d; color:white; text-align:center; font-size: 3rem; font-weight: bold; padding: 20px 0; margin: 0;">
-        JMP
-    </div>
-
-    <!-- Contact Info -->
-    <div style="text-align:center; margin: 10px 0 30px 0; font-size: 1rem; color: #001f4d; font-weight: 600;">
-        Contact: (714) 631-0322 | Email: jmpcashforcars@gmail.com
-        Fast and easy – get a cash offer today!
-    </div>
-
     <header>
-        <h1>Sell Your Car for Cash</h1>
-        <p>Fast and easy – get a cash offer today!</p>
+        <h1>JMP</h1>
+        <p>Contact: (714) 631-0322 | Email: jmpcashforcars@gmail.com
+            Fast and easy – get a cash offer today!</p>
     </header>
 
     <main>
