--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
     <!-- Company Name Blue Banner -->
     <header>
         <h1>JMP</h1>
-        <p>Contact: (714) 631-0322 | Email: jmpcashforcars@gmail.com
-            
-            Fast and easy – get a cash offer today!</p>
+        <p>Contact: (714) 631-0322 | Email: jmpcashforcars@gmail.com</p>
+        <p>Fast and easy – get a cash offer today!</p>
     </header>
 
     <main>
