--- a/index.html
+++ b/index.html
@@ -11,12 +11,11 @@
     <header>
         <h1>JMP</h1>
         <p>Contact: (714) 631-0322 | Email: jmpcashforcars@gmail.com</p>
-        <p>Fast and easy – get a cash offer today!</p>
     </header>
 
     <main>
         <section id="form-section">
-            <h2>Get an Offer</h2>
+            <h2>Get an Offer Today</h2>
             <form action="https://formsubmit.co/jmpcashforcars@gmail.com" method="POST" enctype="multipart/form-data">
                 <!-- Hidden setup fields -->
                 <input type="hidden" name="_captcha" value="false">
