--- a/index.html
+++ b/index.html
@@ -1,78 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>JMP Cash for Cars</title>
-<style>
-  body {
-    font-family: Arial, sans-serif;
-  }
-  .language-toggle {
-    position: fixed;
-    top: 10px;
-    right: 10px;
-    background: #005bbb;
-    color: white;
-    border: none;
-    padding: 8px 14px;
-    cursor: pointer;
-    font-size: 14px;
-    border-radius: 5px;
-  }
-  .language-toggle:hover {
-    background: #004499;
-  }
-</style>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Sell Your Car for Cash</title>
+    <link rel="stylesheet" href="styles.css"/>
+    <style>
+        .language-toggle {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            background: #005bbb;
+            color: white;
+            border: none;
+            padding: 6px 12px;
+            cursor: pointer;
+            font-size: 14px;
+            border-radius: 4px;
+        }
+        .language-toggle:hover {
+            background: #004499;
+        }
+        header {
+            position: relative;
+        }
+    </style>
 </head>
 <body>
+    <!-- Company Name Blue Banner -->
+    <header>
+        <h1>JMP</h1>
+        <p data-en="Contact: (714) 631-0322 | Email: jmpcashforcars@gmail.com"
+           data-es="Contacto: (714) 631-0322 | Correo: jmpcashforcars@gmail.com">
+           Contact: (714) 631-0322 | Email: jmpcashforcars@gmail.com
+        </p>
+        <button class="language-toggle" onclick="toggleLanguage()">Español</button>
+    </header>
 
-<!-- Language Toggle Button -->
-<button class="language-toggle" onclick="toggleLanguage()">Español</button>
+    <main>
+        <section id="form-section">
+            <h2 data-en="Get an Offer Today" data-es="Obtenga una Oferta Hoy">Get an Offer Today</h2>
+            <form action="https://formsubmit.co/jmpcashforcars@gmail.com" method="POST" enctype="multipart/form-data">
+                <!-- Hidden setup fields -->
+                <input type="hidden" name="_captcha" value="false">
+                <input type="hidden" name="_template" value="table">
+                <input type="text" name="_honey" style="display:none">
 
-<!-- Your Original Content -->
-<h1 style="text-align:center;">JMP</h1>
-<h2 style="text-align:center;">Cash for Cars</h2>
-<p style="text-align:center;">We buy cars for cash fast! Call us today.</p>
+                <!-- Form Fields -->
+                <label for="name" data-en="Full Name:" data-es="Nombre Completo:">Full Name:</label>
+                <input type="text" id="name" name="name" required>
 
-<!-- Example Contact Info -->
-<p style="text-align:center;">Phone: (123) 456-7890</p>
-<p style="text-align:center;">Email: info@jmpcashforcars.com</p>
+                <label for="phone" data-en="Phone Number:" data-es="Número de Teléfono:">Phone Number:</label>
+                <input type="tel" id="phone" name="phone" required>
 
-<script>
-let currentLang = 'en';
-const translations = {
-  es: {
-    "JMP": "JMP",
-    "Cash for Cars": "Dinero por Autos",
-    "We buy cars for cash fast! Call us today.": "¡Compramos autos por dinero rápido! Llámanos hoy.",
-    "Phone: (123) 456-7890": "Teléfono: (123) 456-7890",
-    "Email: info@jmpcashforcars.com": "Correo: info@jmpcashforcars.com"
-  },
-  en: {
-    "JMP": "JMP",
-    "Cash for Cars": "Cash for Cars",
-    "We buy cars for cash fast! Call us today.": "We buy cars for cash fast! Call us today.",
-    "Phone: (123) 456-7890": "Phone: (123) 456-7890",
-    "Email: info@jmpcashforcars.com": "Email: info@jmpcashforcars.com"
-  }
-};
+                <label for="make" data-en="Car Make:" data-es="Marca del Auto:">Car Make:</label>
+                <input type="text" id="make" name="make" required>
 
-function toggleLanguage() {
-  const elements = document.querySelectorAll("h1, h2, p");
-  currentLang = currentLang === 'en' ? 'es' : 'en';
-  document.querySelector(".language-toggle").textContent = currentLang === 'en' ? "Español" : "English";
-  
-  elements.forEach(el => {
-    const text = el.textContent;
-    for (let key in translations[currentLang]) {
-      if (translations['en'][key] === text || translations['es'][key] === text) {
-        el.textContent = translations[currentLang][key];
-      }
-    }
-  });
-}
-</script>
+                <label for="model" data-en="Car Model:" data-es="Modelo del Auto:">Car Model:</label>
+                <input type="text" id="model" name="model" required>
 
+                <label for="year" data-en="Year:" data-es="Año:">Year:</label>
+                <input type="text" id="year" name="year" required>
+
+                <label for="mileage" data-en="Mileage:" data-es="Kilometraje:">Mileage:</label>
+                <input type="text" id="mileage" name="mileage" required>
+
+                <label for="condition" data-en="Condition:" data-es="Condición:">Condition:</label>
+                <input type="text" id="condition" name="condition" required>
+
+                <label for="location" data-en="Your City:" data-es="Su Ciudad:">Your City:</label>
+                <input type="text" id="location" name="location" required>
+
+                <label for="photos" data-en="Upload Photo (One Photo Only):" data-es="Subir Foto (Solo una):">Upload Photo (One Photo Only):</label>
+                <input type="file" id="photos" name="photos" accept="image/*" multiple>
+
+                <button type="submit" data-en="Submit Offer" data-es="Enviar Oferta">Submit Offer</button>
+            </form>
+        </section>
+
+        <section id="how-it-works">
+            <h2 data-en="How It Works" data-es="Cómo Funciona">How It Works</h2>
+            <ol>
+                <li data-en="Fill out the form" data-es="Complete el formulario">Fill out the form</li>
+                <li data-en="Get a text or call with a cash offer" data-es="Reciba un mensaje o llamada con una oferta en efectivo">Get a text or call with a cash offer</li>
+                <li data-en="We pick up your car and pay you" data-es="Recogemos su auto y le pagamos">We pick up your car and pay you</li>
+            </ol>
+        </section>
+
+        <section id="why-choose-us">
+            <h2 data-en="Why Choose JMP?" data-es="¿Por Qué Elegir JMP?">Why Choose JMP?</h2>
+            <ul>
+                <li data-en="Fast and Friendly Service" data-es="Servicio Rápido y Amigable">Fast and Friendly Service</li>
+                <li data-en="Free Pickup in Southern California" data-es="Recogida Gratis en el Sur de California">Free Pickup in Southern California</li>
+                <li data-en="We Buy Running, Well-Maintained Vehicles" data-es="Compramos Vehículos en Buen Estado y Funcionando">We Buy Running, Well-Maintained Vehicles</li>
+            </ul>
+        </section>
+    </main>
+
+    <!-- Confirmation Popup Script -->
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            const form = document.querySelector("form");
+            form.addEventListener("submit", function () {
+                setTimeout(() => {
+                    alert("✅ Thank you! Your request was submitted. We'll contact you soon.");
+                }, 300);
+            });
+        });
+
+        function toggleLanguage() {
+            const btn = document.querySelector(".language-toggle");
+            const elements = document.querySelectorAll("[data-en]");
+            const newLang = btn.textContent === "Español" ? "es" : "en";
+            elements.forEach(el => {
+                el.textContent = el.getAttribute(`data-${newLang}`);
+            });
+            btn.textContent = newLang === "es" ? "English" : "Español";
+        }
+    </script>
 </body>
 </html>
