--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
     <!-- Company Name Blue Banner -->
     <header>
         <h1>JMP</h1>
+        <h2 data-en="Cash for Cars – We Buy Your Car for Cash" data-es="Efectivo por Autos – Compramos su Auto por Dinero">
+            Cash for Cars – We Buy Your Car for Cash
+        </h2>
         <p data-en="Contact: (714) 631-0322 | Email: jmpcashforcars@gmail.com"
            data-es="Contacto: (714) 631-0322 | Correo: jmpcashforcars@gmail.com">
            Contact: (714) 631-0322 | Email: jmpcashforcars@gmail.com
@@ -62,7 +65,7 @@
                 <label for="year" data-en="Year:" data-es="Año:">Year:</label>
                 <input type="text" id="year" name="year" required>
 
-                <label for="mileage" data-en="Mileage:" data-es="Kilometraje:">Mileage:</label>
+                <label for="mileage" data-en="Mileage:" data-es="Milla:">Mileage:</label>
                 <input type="text" id="mileage" name="mileage" required>
 
                 <label for="condition" data-en="Condition:" data-es="Condición:">Condition:</label>
